--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,17 @@ repository = "https://github.com/Juici/thicc"
 documentation = "https://docs.rs/thicc"
 
 [features]
-default = []
+default = ["std", "macros"]
 std = ["alloc"]
 alloc = []
+macros = ["wchar"]
 
 [dependencies]
 cfg-if = "1.0"
 impls = "1.0"
 libc = "0.2.94"
+
+wchar = { version = "0.8.0", optional = true }
+
+[dev-dependencies]
+wchar = "0.8.0"
