--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ documentation = "https://docs.rs/thicc"
 
 [features]
 default = ["std", "macros"]
-std = ["alloc"]
+std = ["alloc", "wmemchr/std"]
 alloc = []
 macros = ["wchar"]
 
@@ -21,6 +21,7 @@ cfg-if = "1.0"
 impls = "1.0"
 libc = "0.2.94"
 
+wmemchr = { version = "0.1", default-features = false }
 wchar = { version = "0.10", optional = true }
 
 [dev-dependencies]
